# jira-bot-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
conf/: config.yml  users.yml
graph-rs/: Cargo.toml
graph-rs/src/: main.rs
src/: bot.rs  http.rs  jira.rs  jira_bot.rs  lib.rs  main.rs  requests.rs
src/mods/: bot.rs  jira.rs  mod.rs
