[package]
name = "jira-slack-bot"
version = "0.1.0"
authors = ["Stephen Carman <shcarman@gmail.com>"]

[lib]
name = "botlib"
path = "src/lib.rs"

[[bin]]
name = "jira-bot"
path = "src/main.rs"

[[bin]]
name = "jira-requests"
path = "src/requests.rs"

[dependencies]
json = "*"
lazy_static = "1.0"
chrono = "0.4"
reqwest = "0.8.2"
config =  "0.6"
clap = { version = "2.29.2", features = ["color", "suggestions"] }
slack = "0.19.0"
slack_api = "0.19.0"